finally made it work

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       - ~/data/jenkins-slave:/home/jenkins/agent
     env_file:
       - ./jenkins.env
+    links:
+      - jenkins-master
     networks:
       - jenkins_bridge
 networks:
